breaking down file into more manageable pieces - extracted  three transcripts

--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -259,16 +259,16 @@ $$ {#eq-NDLM-forecasting-distribution}
 So you have more observation once you have seen the data. We will talk about how to perform Bayesian inference to obtain all these distributions under this model setting. 
 
 $$
-p(\theta_t \mid D_T)  \qquad t < T \qquad \text{smoothing distribution}
+p(\theta_t \mid \mathcal{D}_T)  \qquad t < T \qquad \text{smoothing distribution}
 $$ {#eq-NDLM-smoothing-distribution}
 
 ### The forecast function for the NDLM
 
-In addition to all the structure that we described before and all the densities that we are interested in finding, we also have as usual, the so-called *forecast function*, which instead of being the density is just $\mathbb{E}[y(t+h)\mid \mathca{D}_t]$ i.e. expected value of y at time t given all the information we have before time t. 
+In addition to all the structure that we described before and all the densities that we are interested in finding, we also have as usual, the so-called *forecast function*, which instead of being the density is just $\mathbb{E}[y(t+h)\mid \mathcal{D}_t]$ i.e. expected value of y at time t given all the information we have before time t. 
 
 $$
 \mathbb{E}[y(t+h)\mid \mathcal(D_t)] = F'_{t+h} G_{t+h} \ldots G_{t+1} \mathbb{E}[\theta_t \mid \mathcal{D}_t]
-$$ {#eq-forecast-function-for-ndlm}
+$$ {#eq-forecast-function-for-NDLM}
 
 
 This is the form of the forecast function. 
@@ -278,65 +278,22 @@ In these cases, the forecast function can be simplified and written as:
 
 $$
 f_t(h) = \mathbb{E}(y_{t+h} \mid D_t) = F'G^h \mathbb{E}(\theta_t \mid \mathcal{D}_t)
-$$ {#eq-forecast-function-for-ndlm-constant-F-G}
+$$ {#eq-forecast-function-for-NDLM-constant-F-G}
 
 
-One thing that we will learn is that the eigenstructure of this matrix is very important to define the form of the forecast function, and it's very important for model building and for adding components into your model. 
+One thing that we will learn is that the eigen-structure of this matrix is very important to define the form of the forecast function, and it's very important for model building and for adding components into your model. 
 
 ### NDLM short form notation
 
 Finally, just in terms of short notation, we can always write down when we're working with normal dynamic linear models, we may be referring to the model instead of writing the two equations, the system and the observation equation. I can just write all the components that define my model.
 $$ 
 \{F_t, G_t, v_t, W_t\} 
-$$ {#eq-nldm-model-shothand-notation}
+$$ {#eq-NDLM-model-shothand-notation}
 
 ::: {.callout-note collapse="true"}
 ## Video Transcript
 
-In this part of the course, I will discuss the class of normal dynamic linear models for analyzing and forecasting non-stationary time series. We will talk about Bayesian inference and forecasting within this class of models and describe model building as well. 
-
-### Motivating example
-
-I want to begin first with a motivating example.  Suppose you have a model that is very simple and has no temporal structure here, just a model that looks like this. You have your time series $y_t$. Then you're interested in just thinking about what is the mean level of that time series. That mean level, I'm going to call it $\mu$ and then I have some noise and the noise is normally distributed. They are all independent, identically distributed normal random variables $\Normal(0,v)$. Again, I can think of my time series. Suppose that I have my time series here, and then I'm plotting y_t. Then I have something that looks like this. In this model that $\mu$ is going to try to get the mean of that time series, this expected value of y_t, which is $\mu$. The variance here of $y_t$ is $v$ under this model. What may happen in practice again, this model has no temporal structure, I may want to incorporate some temporal structure that says, well, I think that the level of this, the expected value of this time series, should be changing over time. If you were to do that, you will write down a model where the $mu$ changes over time, so it's indexed in time. Then you have still your same noise here. Let's again assume $\Normal(0,v)$. I have now to make a decision on how I'm going to incorporate temporal structure by modeling the changes over time in this parameter $\mu_t$. You could consider different options. 
-
-The simplest possible, probably that you can consider is something that looks like this. You have that random walk type of structure where $\mu_t$ is now going to be written as $\mu_{t-1}$. The expected value of $\mu_t$, you'll think of it as $\mu_{t-1}$ plus some noise. That error here is going to be again, assume normally distributed random variable centered at zero and with variance w. There is another assumption that we can make here and is that the nu t and omega t here, are also independent of each other. When I have this model, what am assuming here is that the mean level of the series is changing over time. 
-
-These type of models have a few characteristics. This is an example of a normal dynamic linear model, as we will see later. In this models, we usually have a few things.
-
-The first thing is we have two equations. One is the so-called observation equation that is relating your $y_t$, your observed process to some parameters in the model that are changing over time. The next equation is the so-called system level equation or evolution equation that tells me how that time varying parameter is going to be changing over time. The other thing you may notice is that we have a linear structure both in the observational level and in the system level. The linear structure, in the sense of the expected value of $y_t$ is just a linear function of that $\mu_t$. It happens to be $\mu_t$ in this particular case. In the second level, I can think of the
-expected value of $\mu_t$ as a linear function given $\mu_{t-1}$, so it's a function that is linear on $\mu_{t-1}$. There is that linear structure. The other thing that we have here is at both levels, we have the assumption of normality for the noise terms in those equations. This is an example of a Gaussian or normal dynamic. These are time-varying parameters linear model. We will be discussing the general class of models. This is just an example. We will also discuss how to build different structures
-into the model, as well as how to perform Bayesian inference and forecasting.
-
-### General form of the model
-
-The general class of dynamic linear models can be written as follows. Again, we are going to
-have two equations. One is the so-called observation equation that relates the observations to the parameters in the model, and the notation we are going to use is as follows. Here, my observations are univariate. We are discussing models for univariate time series. I have that related to a vector of parameters, Theta_t plus some noise here. This is the noise. The noise are assumed to be independent, identically distributed normal random variables, 0, $V_t$. Then I have another equation which is a system equation that has this form. There is a general G_t matrix. This is going to be depending on $\theta_{t-1}$. This is a vector, and then I have again, these are iid multivariate $\Normal(0, W_t)$. This is the observation equation. This is the system equation or evolution equation. This defines a normal dynamic linear model. Here, we are going to say that $F_t$ is a vector. The dimension of the vector is going to be the same as the number of parameters in the model. Let's say we have k. This is a vector of known values. For each t, we are going to assume that we know what that vector is. Then we have the vector of parameters here is also of dimension k of parameters. The G is the next thing we need to define is a known matrix. That one is also assumed to be known, and then I have $V_t$ is variance at the observational level. The W_t we are going to assume at the beginning that these two quantities are also known for all the values t. This is the variance-covariance matrix at the system level. Again, if we think about these two equations, we have the model defined in this way. 
-
-There is a next piece that we need to consider if we are going to perform based in inference for the model parameters. 
-The next piece that we need to consider to just fully specify the model is what is the prior distribution. 
-In a normal dynamic linear model, the prior distribution is assumed to be conjugate here. 
-In the case again in which $V_t$ and $W_t$ are known, we are going to be assuming that, say that zero, the parameter vector before observing any data is going to be normally distributed Multivariate normal with $M_0$ and $C_0$. The mean is a vector, again of the same dimension as $\theta_0$. 
-Then I have k by k covariance matrix there as well. These are assumed to be also given to move forward with the model. 
-
-### Inference, forcasting, smoothing, and filtering.
-
-In terms of the inference, there are different kinds of densities and quantities that we are interested in. 
-One distribution that we are interested in finding is the so-called **filtering distribution**. We may be interested here in finding what is the density of $\theta_{t}$ given all the observations that we have up to time $t$. I'm going to call and all the information that I have up to time t. I'm going to call that $D_t$ . It can also be, in some cases, I will just write down. So $D_t$, you can view with all the info up to time $t$. Usually, it is all the information I have at time zero. Then coupled, if there is no additional information that's going to be coupled with all the data points I have up to that time. Here I'm conditioning on all the observed quantities and the prior information up to time t, and I may be interested in just finding what is the distribution for $\theta_{t}$. 
-
-This is called filtering. Another quantity that is very important in time series analysis is forecasting. 
-
-I may be interested in just what is the **density**, the distribution of $y_{t+h}$ ? Again, the number of steps ahead here, here I'm thinking of $h$, given that I have all this information up to time $t$. I'm interested in **predictions** here. We will be talking about **forecasting**. Then another important quantity or an important set of distributions is what we call the **smoothing distribution**. Usually, you have a time series, when you get your data, you observe, I don't know, 300 data points. As you go with the filtering, you are going to start from zero all the way to 300 and you're going to update these filtering distributions as you go and move forward. But then you may want to revisit your parameter at time 10, for example, given that you now have observed all these 300 observations. In that case, you're interested in densities that are of the form. Let's say that you observe capital $T$ in your process and now you are going to revisit that density for $\theta_t$.  This is now in the past. Here we assume that t is smaller than capital T. This is called smoothing. So you have more observation once you have seen the data. We will talk about how to perform Bayesian inference to obtain all these distributions under this model setting. 
-
-### The forecast function {.unumbered}
-In addition to all the structure that we described before and all the densities that we are interested in finding, we also have as usual, the so-called forecast function, which is just instead of being the density is just expected value of $y(t+h)$ given all the information I have up to time t. In the case of a general normal dynamic linear model, we have the structure for these
-just using the equations, the observation and the system of equations. 
-
-We're going to have here $G_{t+h}$. We multiply all these all the way to $G_(t+1)$, and then we have the $\mathbb{E}[\theta_{t}\mid D_t]$. 
-This is the form of the **forecast function**. There are particular cases and particular models that we will be discussing in which the $F_t$ is equal to $F$, so is constant for all $t$ and $G_t$ is also constant for all $t$. In those cases, the forecast function can be simplified and written as $F'G^h$ expected value. One thing that we will learn is that the eigenstructure of this matrix is very important to define the form of the forecast function, and it's very important for model building and for adding components into your model. 
-
-### Short-form notation {.unumbered}
-
-Finally, just in terms of short notation, we can always write down when we're working with normal dynamic linear models, we may be referring to the model instead of writing the two equations, the system and the observation equation. I can just write all the components that define my model. This fully specifies the model in terms of the two equations. If I know what Ft is, what Gt is, what Vt is, and the covariance at the system level. I sometimes will be just talking about a short notation like this for defining the model.
+{{< include _C3-L03-T01.qmd >}}
 
 :::
 
@@ -408,7 +365,7 @@ Again, we're going to have something of the form $F$ transposed $G$ to the power
 
 Which depending on the data that you have is you're just going to have something that is a value that depends on $t$ and it doesn't depend on $h$. What this model is telling you is that the forecast function, how you expect to see future values of the series h steps ahead is something that looks like the level that you estimated at time $t$.
 
-### Second order polynomial model AKA Linear growth model
+### Second order Polynomial model AKA Linear Growth model
 
 [@west2013bayesian §7.1-7.2] gives a detailed analysis of this model.
 
@@ -425,12 +382,10 @@ $$\begin{aligned}
 \end{aligned}
 $$ {#eq-nldm-2-order-polynomial-model}
 
-
 So there are different ways in which you can interpret this two parameters but essentially:
 
 - $\theta_{t-1,1}$ is related to the **baseline** level of the series 
 - $\theta_{t-1,2}$ is related to the **rate of change** of the of the series. 
-
 
 ::: {.callout-tip collapse="true"}
 ## Short form DLM notation
@@ -452,19 +407,30 @@ $$
 $$
 
 So what would be my $F$ and my $G$ in this model? So again my theta vector has two components, thus my $G$, so my $F$ is going to be a two dimensional. We can write down $F$ transposed as the only component that appears at this level is the first component of the vector. 
-I'm going to have 1 and then a zero for $F$ transposed. c.f. [@eq-DLM-2-order-polynomial-model-short-form]
+I'm going to have 1 and then a zero for $F$ transposed. c.f. [@eq-DLM-2-order-polynomial-model-short-form-simple]
 And then my $G$ here if you think about writing down $\theta_t$ times $G$ say the $t-1 + \omega_t$. Then you have that you're $G$ is going to have this form.
+
 $$
 \begin{aligned}
-\mathbf{F} &= (1,0)' \\
-\mathbf{G} &= \begin{pmatrix} 1 & h \\ 0 & 1 \end{pmatrix} \\
-V_t &= v_t \\
-\mathbf{W}_t &= \begin{pmatrix} w_{t,11} & w_{t,12} \\ w_{t,21} & w_{t,22} \end{pmatrix}
+\mathbf{F} &= (1,0)' & V_t &= v_t \\
+\mathbf{G} &= \begin{pmatrix} 1 & h \\ 0 & 1 \end{pmatrix} 
+& \mathbf{W}_t &= \begin{pmatrix} w_{t,11} & 0 \\ 0 & w_{t,22} \end{pmatrix}
 \end{aligned}
-$$ {#eq-DLM-2-order-polynomial-model-short-form}
+$$ {#eq-DLM-2-order-polynomial-model-short-form-simple}
 
-The lesson and the handouts differ in the form $\mathbf{W}_t$. In the lecture we assumed zero covariance but in the handout the covarinace was snuk in. This gives us a slightly more general model. The covariance though is symetric so we get an extra parameter we need to infer and include in the prior. Anyhow I keept the more general form, though in most cases we will keep the off diagonal terms at zero.
+this is the form from the video
+$$
+\begin{aligned}
+\mathbf{F} &= (1,0)' & V_t &= v_t \\
+\mathbf{G} &= \begin{pmatrix} 1 & h \\ 0 & 1 \end{pmatrix} 
+& \mathbf{W}_t &= \begin{pmatrix} w_{t,11} & w_{t,12} \\ w_{t,21} & w_{t,22} \end{pmatrix}
+\end{aligned}
+$$ {#eq-DLM-2-order-polynomial-model-short-form-complex}
 
+this is the more general form from the handout. Note that in this case we have 
+$w_{t,12}=w_{t,21}$ so there is just one extra parameter.
+
+The lesson videos and the handouts differ in the form $\mathbf{W}_t$. In the lecture we assumed zero covariance but in the handout the covariance was snuck in. This gives us a slightly more general model. The covariance though is symmetric so we get an extra parameter we need to infer and include in the prior. Anyhow I kept the more general form, though in most cases we will keep the off diagonal terms at zero.
 
 So for the first component, I have past values of both components. That's why I have a 1 and 1 here for the second component I only have the past value of the second component. So there is a zero and a 1. So this tells me what is the structure of this second order polynomial. If I think about how to obtain the forecast function for this second order polynomial is going to be very similar to what we did before. So you can write it down as F transposed G to the power of h, expected value of theta t given Dt. Now the expected value is going to be vector also with two components because theta_t is a two dimensional vector. The structure here if you look at what G is G to the power of h going to be a matrix, that is going to look like 1, h, 0 1. When you multiply that matrix time this times this F what you're going to end up having is something that looks like 1 h times this expected value of theta t given Dt. So I can think of two components here, so this gives you a constant on h, this part is not going to depend on h. So I can write this down as k t 11 component multiplied by 1 and then I have another constant, multiplied by h. So you can see what happens now is that your forecast function has the form of a linear polynomial. So it's just a linear function on the number of steps ahead. The slope and the intercept related to that linear function are going to depend on the expected value of, theta_t given the all the information I have up to time t. But essentially is a way to model linear trends. So this is what happens with the second order polynomial model.
 
@@ -475,7 +441,7 @@ $$
 $$
 
 $$
-\quad \mathbf{G^h} = \begin{pmatrix} 1 & h \\ 0 & 1 \end{pmatrix}
+\mathbf{G^h} = \begin{pmatrix} 1 & h \\ 0 & 1 \end{pmatrix}
 $$
 
 $$
@@ -489,18 +455,13 @@ $$ {#eq-second-order-poly-prediction-fn}
 
 $$
 \begin{aligned}
-\mathbf{G^h} 
-       &= \begin{pmatrix}
-1 & h \\
-0 & 1
-\end{pmatrix}
+\mathbf{G^h} &= \begin{pmatrix} 1 & h \\ 0 & 1 \end{pmatrix}
 \end{aligned}
 $$ {#eq-second-order-poly-Gh}
 
-
 ### General p-th order polynomial model 
 
-We can consider a so called p-th order polynomial model. This model will have a state-space vector of dimension p and a polynomial of order p − 1 forecast function on h. The model can be written as
+We can consider a so called p-th order polynomial model. This model will have a state-space vector of dimension p and a polynomial of order $p − 1$ forecast function on $h$. The model can be written as
 
 $$
 \{E_p, J_p(1), v_t, W_t\}
@@ -553,18 +514,8 @@ Plus k_t1 h + k_t p- 1, h to the p-1, so that's my forecast function. There is a
 ::: {.callout-note collapse="true"}
 ## Video Transcript
 
-I will begin describing the structure of a particular class of models now, the polynomial trend models.  These are models that are useful to describe linear trends or polynomial trends in your time series.  So if you have a data set, where you have an increasing trend, or a decreasing trend, you would use one of those components in your model. 
-We will begin with the first order polynomial model, which we have already described. It's the one that has $y_t$ is a single parameter, I'm going to call it just $\theta_t + \nu_t$. And then a random walk evolution for that single parameter, so that's the mean level of the series. And then we assume that it changes as a random walk, so this is the first order polynomial model.
+{{< include _C3-L03-T02.qmd >}}
 
-So in general, I'm going to begin with the first order polynomial model, which we have already described.
-It's the one that has y_t is a single parameter, I'm going to call it just \theta_t + \nu_t. And then a random walk evolution for that single parameters, so that's the mean level of the series. And then we assume that it changes As a random walk, so this is the first order polynomial model. In this model if I want to write it down in short form I would have a quadruple that looks like this. So the F here that goes F transposed times the parameter vector in this case we have a scalar vector, scalar parameter. It's going to be 1 my G that goes next to the state of t -1 is going to also be 1. And then I have vt and Wt here. So this fully defines my model if I think about the forecast function of this model using the representation we had before. Again, we're going to have something of the form F transposed G to the power of h and then the expected value of that theta_t given Dt. F is 1, G is 1, therefore I'm going to end up having just expected value of theta_t given Dt. Which depending on the data that you have is you're just going to have something that is a value that depends on t and it doesn't depend on h.
-
-What this model is telling you is that the forecast function, how you expect to see future values of the series h steps ahead is something that looks like the level that you estimated at time t. 
-
-So that's the forecast function, you is a first order is a zero order polynomial is a constant on h and it's called the first order polynomial model. In the case of a second order polynomial We are going to now think about about a model in which we want to capture things that are not a constant over time but may have an increasing or decreasing linear trend. In this case we're going to need two components in your parameter vector in the state vector. 
-
-So we have again something that looks like in my observation equation. I'm going to have, I'm going to call it say theta{t,1} Normal vt, and then I'm going to have say theta_{t,1} is going to be of the form to theta_{t-1,1} and there is another component here. The other component enters this equation plus let's call this And then I have finally also I need an evolution for the second component of the process which is going to be again having a random walk type of behavior. So there is different ways in which you can interpret this two parameters but essentially one of them is related to the baseline level of the series the other one is related to the rate of change of the of the series. So if you think about the dlm representation again, these two components, I can collect into the vector wt. and then assume that this wt Is normal. Now this is a bivariate normal. So what would be my F and my G in this model? So again my theta vector has two components My G, so my F is going to be a two dimensional vectors. So I can write down F transposed as the only component that appears at this level is the first component of the vector. I'm going to have 1 and
-then a zero for F transposed. And then my G here if you think about writing down theta t times G say the t -1 +wt. Then you have that you're G is going to have this form. So for the first component, I have past values of both components. That's why I have a 1 and 1 here for the second component I only have the past value of the second component. So there is a zero and a 1. So this tells me what is the structure of this second order polynomial. If I think about how to obtain the forecast function for this second order polynomial is going to be very similar to what we did before. So you can write it down as F transposed G to the power of h, expected value of theta t given Dt. Now the expected value is going to be vector also with two components because theta_t is a two dimensional vector. The structure here if you look at what G is G to the power of h going to be a matrix, that is going to look like 1, h, 0 1. When you multiply that matrix time this times this F what you're going to end up having is something that looks like 1 h times this expected value of theta t given Dt. So I can think of two components here, so this gives you a constant on h, this part is not going to depend on h. So I can write this down as k t 11 component multiplied by 1 and then I have another constant, multiplied by h. So you can see what happens now is that your forecast function has the form of a linear polynomial. So it's just a linear function on the number of steps ahead. The slope and the intercept related to that linear function are going to depend on the expected value of, theta_t given the all the information I have up to time t. But essentially is a way to model linear trends. So this is what happens with the second order polynomial model. As we included linear trends and constant values in the forecast function, we may want to also incorporate other kinds of trends, polynomial trends in the model. So you may want to have a quadratic form, the forecast function or a cubic forecast function as a function of h. So the all those can be incorporated using the general p-order polynomial model, so I will just describe the form of this model. And in this type of model, the forecast function is going to have order p-1. So your parameter vector is going to have dimension p. So you're going to have theta_t theta t1 to tp. Your F matrix is going to be constant if I write it as a row vector. F transpose is going to be a p dimensional vector with the one in the first entry and zeros everywhere else. My G matrix is going to have this form and there is different parameterizations of this model and I will talk a little bit about this. But one way to parameterize the model is something that looks like this. So you have ones in the diagonal of the matrix, the matrix is going to be a p by p has to be the dimension of the p compatible with the dimension of the state vector. And then you have zeros's below the diagonal above that set of ones that are also ones above the diagonal. So this matrix G is what we call a Jordan block of dimension p of 1. So here 1 is the number that appears in the diagonal. And then I have a p Ip matrix, I have ones in the upper diagonal part. So this is the form of the model, so once again I have the F the G, and the wt. I have my model. The forecast function in this case again can be written as F transposed G to the power of h. And when you simplify times expected value of theta_t, given Dt. Once you simplify those functions you get something that is a polynomial of order p-1 in h. So I just can write this down as kt constant.Plus kt1 h + kt p- 1, h to the p -1, so that's my forecast function. There is an alternative parameterization of this model that has the same F and the same algebraic form of the forecast function, the same form of the forecast function. But instead of having this G matrix, it has a matrix that has ones in the diagonal and ones everywhere above the diagonal. So it's an upper triangular matrix with ones in the diagonal and above the diagonal. That's a different parameterization of the same model is going to have the same general form of the forecast function is a different parameterization. So again, you can consider the way you think about these models is you think what kind of forecast function I want to have for my future? What is the type of predictions that I expect to have in my model? And if they look like a linear trend, I use a second order polynomial. If it looks like a quadratic trend in the forecast then I would use 3rd order polynomial model representation.
 :::
 
 
@@ -618,15 +569,7 @@ $$ {#eq-tvar}
 ::: {.callout-note collapse="true"}
 ## Video Transcript {.unnumbered}
 
-In regression models, we may also have additional covariates that are also measured sequentially over time. We may want to regress the y_t times series and see what relationships they have with other covariates that are also measured over time. The simplest possible case is the dynamic simple regression model. In this case, I can write down. I have a single covariate, that covariate is X_t that is observed here, and then I have the usual. In this case, I have an intercept and a slope, and this is representing my simple linear regression. It's just the regression where both the intercept and the slope are time-varying. I can define the variation. I need to specify what's the evolution of the two components, and we are going to use this random walk. We could use other structures, but again, in the normal linear case, we are going to be using these evolution equations. Then I collect here my W's as a single vector. The Omega t is going to have the two components in here. These are normally distributed zero and variance covariance matrix W_t, that is a two-by-two matrix. This is the case of the simple regression model. In the case of this model, we have F now is time-varying. This is going to change depending on the value of X_t. I can write Ft transpose as one and X_t. My Theta vector. Again, if I think about what it is, is just Beta t, 0 Beta t, 1. I have those two components. 
-
-The G matrix is going to be the identity, and you can see that essentially the first component is related to the first component in t minus one, and the second component at time t is related to the second component at time t minus 1. So the identity matrix will be the G. Therefore, if I think about my forecast function in the simple linear regression case, this is going to be my F transpose, which is 1 xt times the G, the G is the identity, times the expected value of Theta t, given Dt. For the expected value of Theta t given Dt, This is a two-dimensional vector, so I'm going to have components in there. I can write this down as K_t0 plus K_t1 Xt. We can see that the forecast function is again has that form that depends on that covariate at the time. This should be t plus h because we are evaluating this at t plus h. You need to have the covariate evaluated at t plus h here. In the case of general dynamic regression model, we're going to have a set of covariates. We can have, let's say k of those covariates or p of those covariates, X_t1. This is my observation equation. Instead of having a single covariate, now I'm going to have p of them. I'm going to have coefficients that go with each of those and I may have the Beta t0 coefficient. My G matrix now, if I think about my parameter vector is just p plus 1 dimensional, p plus 1. Yeah, so that I have the 0 and then the p values, so is a p plus 1 vector. Then my G is the identity. My F_t is going to be a vector, is also p plus 1 dimension. The first entry is one, the second is X_t1 X_tp. My forecast function is going to be similar to this, but now we are going to have more than one covariate, so we end up with a forecast function that has this form, p. This is the case for the dynamic regression. 
-
-### TVAR
-
-One particular example of dynamic regression model is the case of a time-varying autoregressive process. This brings us back to those autoregressive processes that we were discussing earlier in the course. When you you're regressing each of the X's correspond to pass values, you have a regression model that we call a time-varying ARP. In this case, your observation equation is going to have the AR coefficients, but the AR coefficients are going to be varying over time. If we assume that we put all the coefficients together and have a random walk evolution equation for those. If I said, I call Phi_t the vector that contains all the components with all the coefficients from one to p, then I can now define this evolution equation. Then my Omega_t here is a p-dimensional vector, and I have Omega t, normal zero, WT, and my epsilon t normal 0 vt. 
-
-This defines a time-varying AR. It's the same structure that we had before. The only difference is my covariates are just past values of the time series. Therefore my forecast function for the time-varying AR is going to have this form where every_thing is going to depend on past values of the time series. We will study this model in particular and make connections with the AR that we studied earlier in the class.
+{{< include _C3-L03-T03.qmd >}}
 
 :::
 
