fixed some math

--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -480,16 +480,12 @@ J_p(1) = \begin{pmatrix}
 \end{pmatrix}
 $$ {#eq-Jordan-form-dynamics}
 
-
 The forecast function is given by
 $$
 f_t(k) = a_{t_0} +  a_{t_1}k + \ldots + a_{t_{n-1}} k^{n-1} \qquad k \in \mathbb{N}
 $$ {#eq-DLM-n-order-polynomial-forecast-function}
 
-where $a_{t_i}$ are the coefficients of the polynomial and $k$ is the number of steps ahead we need in our forecast.
-There is also an alternative parameterization of this model that leads to the
-same algebraic form of the forecast function given by $\{Ep, Lp, vt, W t\}$, with
-
+where $a_{t_i}$ are the coefficients of the polynomial and $k$ is the number of steps ahead we need in our forecast. There is also an alternative parameterization of this model that leads to the same algebraic form of the forecast function given by $\{Ep, Lp, vt, W t\}$, with
 
 $$
 L_p = \begin{pmatrix}
@@ -497,7 +493,7 @@ L_p = \begin{pmatrix}
 0 & 1 & 1 & \cdots & 1 & 1   \\
 0 & 0 & 1 & \cdots & 1 & 1 \\
 \vdots & \vdots & \vdots & \ddots & \vdots \\
-0 & 0 & 0 & \cdots & 1 & 1
+0 & 0 & 0 & \cdots & 1 & 1 \\
 0 & 0 & 0 & \cdots & 0 & 1
 \end{pmatrix}
 $$ {#eq-triangular-form-dynamics}
