reordered some material

--- a/C4-L03.qmd
+++ b/C4-L03.qmd
@@ -515,61 +515,8 @@ Plus k_t1 h + k_t p- 1, h to the p-1, so that's my forecast function. There is a
 :::
 
 
-## Regression models (Video)
+## Summary of polynomial trend  models (Reading)
 
-![Regression models](images/m3_0021.png){.column-margin width="250px" group="slides"}
-
-### Simple dynamic regression
-
-$$
-\begin{aligned}
-y_t &= \beta_{t,0} + \beta_{t,1}x_t + ν_t \\
-\beta_{t,0} &= \beta_{t−1,0} + ω_{t,0} \\
-\beta_{t,1} &= \beta_{t−1,1} + ω_{t,1}
-\end{aligned}
-$$
-
-and so $\theta_t = (\beta_t,0, \beta_{t,1})′$, $F_t = (1, x_t)′$ and $G = I_2$. 
-
-This results in a forecast function of the form 
-
-$$
-f_t(h) = k_{t,0} + k_{t,1}x_{t+h}
-$$
-
-### General dynamic regression
-
-$$
-\begin{aligned}
-y_t &= \beta_{t,0} + \beta_{t,1}x_{t,1} + \ldots \beta_{t,M} x_{t,M} + ν_t \\
-\beta_{t,m} &= \beta_{t−1,m} + ω_{t,m,} & m = 0 : M.
-\end{aligned}
-$$ {#eq-regression-in-short-form}
-
-Then, $\theta = (\beta_t,0, \ldots , \beta_{t,M} )′$, $F_t = (1, x_{t,1}, \ldots , x_{t,M} )′$ and $G = I_M$ . The forecast
-function is given by
-
-$$
-f_t(h) = k_{t,0} + k_{t,1}x_{t+h,1} + \ldots + k_{t+h,M}x_{t+h,M}
-$$ {#eq-gen-regression-forecast-function}
-
-A particular case is of dynamic regressions is the case of time-varying auto-regressions (TVAR) with
-
-$$
-\begin{aligned}
-y_t &= φ_{t,1}y_{t−1} + φ_{t,2}y_{t−2} + \ldots + φ_{t,p} y_{t−p} + ν_t,\\
-φ_{t,m} &= φ_{t−1,m} + ω_{t,m,} & m = 1 : p
-\end{aligned}
-$$ {#eq-tvar}
-
-::: {.callout-note collapse="true"}
-## Video Transcript {.unnumbered}
-
-{{< include _C3-L03-T03.qmd >}}
-
-:::
-
-## Summary of polynomial trend and regression models (Reading)
 
 ### Polynomial Trend Models
 
@@ -703,9 +650,69 @@ L_p =
 \end{pmatrix}.
 $$
 
-#### Dynamic Regression Models
 
-##### Simple Dynamic Regression
+## Regression models (Video)
+
+![Regression models](images/m3_0021.png){.column-margin width="250px" group="slides"}
+
+### Simple dynamic regression
+
+$$
+\begin{aligned}
+y_t &= \beta_{t,0} + \beta_{t,1}x_t + ν_t \\
+\beta_{t,0} &= \beta_{t−1,0} + ω_{t,0} \\
+\beta_{t,1} &= \beta_{t−1,1} + ω_{t,1}
+\end{aligned}
+$$ {#eq-simple-dynamic-regression}
+
+and so $\theta_t = (\beta_t,0, \beta_{t,1})′$, $F_t = (1, x_t)′$ and $G = I_2$. 
+
+This results in a forecast function of the form 
+
+$$
+f_t(h) = k_{t,0} + k_{t,1}x_{t+h}
+$$ {#eq-simple-dynamic-regression-forecast-function}
+
+where $k_{t,0} = E(\beta_{t,0} \mid \mathcal{D}_t)$ and $k_{t,1} = E(\beta_{t,1} \mid \mathcal{D}_t)$.
+
+### General dynamic regression
+
+$$
+\begin{aligned}
+y_t &= \beta_{t,0} + \beta_{t,1}x_{t,1} + \ldots \beta_{t,M} x_{t,M} + ν_t \\
+\beta_{t,m} &= \beta_{t−1,m} + ω_{t,m,} & m = 0 : M.
+\end{aligned}
+$$ {#eq-regression-in-short-form}
+
+Then, $\theta = (\beta_t,0, \ldots , \beta_{t,M} )′$, $F_t = (1, x_{t,1}, \ldots , x_{t,M} )′$ and $G = I_M$ . The forecast
+function is given by
+
+$$
+f_t(h) = k_{t,0} + k_{t,1}x_{t+h,1} + \ldots + k_{t+h,M}x_{t+h,M}
+$$ {#eq-gen-regression-forecast-function}
+
+A particular case is of dynamic regressions is the case of time-varying auto-regressions (TVAR) with
+
+$$
+\begin{aligned}
+y_t &= φ_{t,1}y_{t−1} + φ_{t,2}y_{t−2} + \ldots + φ_{t,p} y_{t−p} + ν_t,\\
+φ_{t,m} &= φ_{t−1,m} + ω_{t,m,} & m = 1 : p
+\end{aligned}
+$$ {#eq-tvar}
+
+::: {.callout-note collapse="true"}
+## Video Transcript {.unnumbered}
+
+{{< include _C3-L03-T03.qmd >}}
+
+:::
+
+
+## Summary of regression models (Reading)
+
+### Dynamic Regression Models
+
+#### Simple Dynamic Regression
 
 $$
 \begin{aligned}
@@ -744,7 +751,7 @@ $$
 y_t &= \beta_{t,0} + \beta_{t,1} x_{t,1} + \dots + \beta_{t,M} x_{t,M} + \nu_t \\
 \beta_{t,m} &= \beta_{t-1,m} + \omega_{t,m}, \quad &m = 0:M.
 \end{aligned}
-$$
+$$ {#eq-general-dynamic-regression}
 
 Then, 
 
@@ -758,7 +765,7 @@ The forecast function is given by:
 
 $$
 f_t(h) = k_{t,0} + k_{t,1} x_{t+h,1} + \dots + k_{t,M} x_{t+h,M}.
-$$
+$$ {#eq-forecast-function-general-dynamic-regression}
 
 A particular case of dynamic regressions is the case of **time-varying autoregressions (TVAR)** with
 [time-varying autoregressions (TVAR)]{.column-margin width="250px" group="slides"}
